-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.10.1
-
None
-
windows 10 mobile/windows 10 desktop
Qt 5.10.1
Example heart rate sample application
-
-
4821972696716f988b4b92f22a9a552be15c5401 (qt/qtconnectivity/5.12)
The Bluetooth low energy heart rate applications do not work on windows UWP platforms (tested windows 10 mobile and windows 10 desktop), upon running them a message is displaying saying that bluetooth is required and is must be enabled to continue... There is a bluetooth v4.2 radio on the PC and v4.0 radio on the phone and bluetooth is enabled on both.
For Gerrit Dashboard: QTBUG-67090 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
244219,4 | qbluetoothlocaldevice_p.cpp: Make sure d_ptr is initialized | 5.12 | qt/qtconnectivity | Status: MERGED | +2 | 0 |