qbluetoothlocaldevice_p.cpp: Make sure d_ptr is initialized

Backends that still use qbluetoothlocaldevce_p.cpp (namely ios and winrt)
overload QBluetoothLocalDevicePrivate::isValid. While it does not make a
difference for ios (as false is returned if no d_ptr is initialized) local
device will be seen as invalid on winrt if there is no d_ptr.

Fixes: QTBUG-67090
Change-Id: I82dfa4563be0ed4800f0a8dd2a9ccfc3fe313e3b
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>