src/bluetooth/qbluetoothlocaldevice_p.cpp
@@ -49,7 +49,7 @@ QT_BEGIN_NAMESPACE
 
 QBluetoothLocalDevice::QBluetoothLocalDevice(QObject *parent) :
     QObject(parent),
-    d_ptr(nullptr)
+    d_ptr(new QBluetoothLocalDevicePrivate(this, QBluetoothAddress()))
 {
 #if !defined(QT_IOS_BLUETOOTH) && !defined(QT_WINRT_BLUETOOTH)
     printDummyWarning();
@@ -57,9 +57,9 @@ QBluetoothLocalDevice::QBluetoothLocalDevice(QObject *parent) :
     registerQBluetoothLocalDeviceMetaType();
 }
 
-QBluetoothLocalDevice::QBluetoothLocalDevice(const QBluetoothAddress &, QObject *parent) :
+QBluetoothLocalDevice::QBluetoothLocalDevice(const QBluetoothAddress &address, QObject *parent) :
     QObject(parent),
-    d_ptr(nullptr)
+    d_ptr(new QBluetoothLocalDevicePrivate(this, address))
 {
     registerQBluetoothLocalDeviceMetaType();
 }
